build: added swagger.yaml
