# docs/swagger.json
@@ -1051,7 +1051,22 @@
                         "in": "query"
                     }
                 ],
-                "responses": {}
+                "responses": {
+                    "200": {
+                        "description": "Operation successful",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
             }
         },
         "/class-category": {
@@ -2563,18 +2578,15 @@
             "type": "object",
             "properties": {
                 "details": {
-                    "description": "Additional details (optional)",
                     "type": "object",
                     "additionalProperties": {
                         "type": "string"
                     }
                 },
                 "message": {
-                    "description": "The response message",
                     "type": "string"
                 },
                 "status": {
-                    "description": "HTTP status code",
                     "type": "integer"
                 }
             }
